# bet365-extractor

./: .gitignore  .prettierignore  README.md  bet365-autorun-bundle.js  bet365-autorun.js  bet365-console-extractor.js  eslint.config.js  index-autorun.html  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
extension/: background.js  extension-background.js  main-world-scroll.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
lib/: bet365-extract-player.js  bet365-format.js  bet365-market-expand.js  bet365-market-inference.js  bet365-market-tabs.js  bet365-network-parse.js  bet365-parsers.js  bet365-protocol-decode.js  bet365-side-panel-tabs.js  bet365-side-panel.js  bet365-stats-subtabs.js  bet365-url.js  bet365-zip.js
scripts/: build-console.mjs  build-extension.mjs  build-html.mjs
templates/: console-shell.js  extension-content.js  extract-player-snippet.js  frame-utils-snippet.js  main-world-scroll.js  network-snippet.js
tests/: bet365-extract-player.test.js  bet365-format.test.js  bet365-market-expand.test.js  bet365-market-inference.test.js  bet365-market-tabs.test.js  bet365-network-parse.test.js  bet365-parsers.test.js  bet365-prematch.test.js  bet365-protocol-decode.test.js  bet365-side-panel-tabs.test.js  bet365-side-panel.test.js  bet365-stats-subtabs.test.js  bet365-url.test.js  build-scripts.test.js  extension-sniffer.test.js  extension-zip.test.js
tests/fixtures/: argentina-austria-player-grids.txt  argentina-austria-team-goals.txt  blob-lineup-fullnames-wire.txt  (+34 more)
