[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bet365-extractor"
version = "0.1.0"
description = "Extrai dados de jogos e odds da Bet365"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bet365-extract = "bet365_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]